set up frontend and consume the backend learner API endpoints